Fix first/last graph bars out of view (#1132)
Update Chart.js to 2.7.3
 
Fixes #1126

--- a/mailscanner/style.css
+++ b/mailscanner/style.css
@@ -689,7 +689,7 @@ div.table > .caption > input {
 
 .reportGraph {
     text-align: center;
-    height: 600px;
+    height: auto;
     width: 600px;
     margin-left: auto;
     margin-right: auto;
